@@ -3,11 +3,11 @@ package com.example.norberbot.service;
 import com.example.norberbot.model.Definition;
 import com.example.norberbot.repository.DefinitionRepository;
 import com.example.norberbot.service.helpers.HelperFunctions;
+import one.util.streamex.StreamEx;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class DefinitionService {
@@ -29,11 +29,9 @@ public class DefinitionService {
 
     public List<Definition> findWordsThatContains(String str) {
          if (HelperFunctions.checkStringLength(str)) {
-             return definitionRepository
-                     .findAll()
-                     .stream()
-                     .filter(entry -> entry.getWord().toLowerCase().contains((str.toLowerCase())))
-                     .collect(Collectors.toList());
+             return StreamEx.of(definitionRepository.findAll())
+                     .filter(entry -> entry.getWord().toLowerCase().contains(str.toLowerCase()))
+                     .toList();
          }
          else {
              return null;
